@@ -1,3 +1,12 @@
+2005-08-30  Yves Combe,,,  <set EMAIL_ADDRESS environment variable>
+
+	change colors letters in memory.
+	clean code and add trace in reading (strange crash).
+
+	* src/boards/memory.c: (create_item):
+	* src/boards/reading.c: (reading_next_level),
+	(reading_destroy_all_items), (reading_create_item):
+
 2005-08-30  Yves Combe  <yves@ycombe.net>
 
 	huftis has remade railroad background from frack svg, because the jpg had awful artifacts.
